# fastapi-redis

./: .gitignore  README.md  dump.rdb  pyproject.toml  redis_start.sh
app/: README.md  celery_worker.py  config.py  fastapi2_cache.py  fastapi3_cache.py  fastapi_cache.py  fastapi_redis_celery.py  producer.py  task.py
tests/performance_tests/: locust_test.py
