[tool.poetry]
name = "fastapi-redis"
version = "0.1.0"
description = ""
authors = ["Robert Alexander <gogonegro@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_redis"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
redis = "^5.0.1"
fastapi = "^0.104.1"
celery = "^5.3.4"
uvicorn = "^0.23.2"
locust = "^2.18.1"
faker = "^19.13.0"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
